package com.dnfm.mina.protobuf;

import com.baidu.bjf.remoting.protobuf.FieldType;
import com.baidu.bjf.remoting.protobuf.annotation.Protobuf;
import com.dnfm.mina.annotation.MessageMeta;

@MessageMeta(
   module = 11159,
   cmd = 0
)
public class REQ_BATTLELEAGUE_ADD_PARTY_MOVECHANNEL extends Message {
   @Protobuf(
      fieldType = FieldType.UINT64,
      order = 1,
      required = false
   )
   public Long partyguid;
   @Protobuf(
      fieldType = FieldType.ENUM,
      order = 2,
      required = false
   )
   public ENUM_TEAM.T teamtype;
}
